Put pages in UL

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Knitting Patterns I Will Make</h1>
-
-    <a href="recipes/rye_light.html">Rye Light Sock</a>
-    <a href="recipes/lichen_kerchief.html">Lichen Kerchief</a>
-    <a href="recipes/tin_ceiling_washcloth.html">Tin Ceiling Washcloth</a>
-    
+    <ul>
+        <li><a href="recipes/rye_light.html">Rye Light Sock</a></li>
+        <li><a href="recipes/lichen_kerchief.html">Lichen Kerchief</a></li>
+        <li><a href="recipes/tin_ceiling_washcloth.html">Tin Ceiling Washcloth</a></li>
+    </ul>
 
 </body>
 </html>
